<resources>
    <string name="app_name">Mattire</string>
    <string name="placeholder_password">Enter your password</string>
    <string name="placeholder_username">Enter your email address or Username</string>
    <string name="login_title">Login</string>
    <string name="new_here">New here?</string>
    <string name="register_title">Register</string>
    <string name="placeholder_email">Enter your Email Address</string>
    <string name="placeholder_username_only">Enter your Username</string>
    <string name="placeholder_confirm">Confirm your password</string>
    <string name="member_already">Already a member?</string>
    <string name="placeholder_phone">Enter your phone number</string>
    <string name="thanks">Thanks</string>
    <string name="shopping_thanks">Thank you for shopping with us.</string>
    <string name="shopping_shipping">Your order will be shipped in 2 – 5 days</string>
    <string name="brand_motto">Shopping made seamless</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">$50.99</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean congue, orci in consequat cursus,
        mi enim semper diam, vitae hendrerit neque lorem sit amet tellus. Nullam et tempor felis. Suspendisse egestas imperdiet urna
        in mattis. Morbi pretium orci lorem, nec lacinia justo efficitur et.
        Nullam placerat diam in est faucibus posuere. Duis sit amet lacus eros. Morbi porttitor et mi in gravida.
        Etiam quam metus, porttitor sed imperdiet non, mollis sed nisi.
        Quisque rutrum felis euismod, posuere justo eget, varius magna. Vestibulum pretium, nisi vitae pellentesque volutpat,
        elit tortor sollicitudin quam, in dictum mi massa in lectus. Aliquam sit amet mi ut lorem egestas feugiat.
        Ut magna ligula, suscipit nec tempus cursus, malesuada sit amet tortor. Nunc a consectetur felis, eu ullamcorper turpis.
        Donec id magna placerat, interdum dolor sit amet, ullamcorper tellus. Donec nec accumsan urna.
        Pellentesque sed mattis lectus, id ullamcorper tortor. In fringilla egestas rutrum. Donec cursus purus dictum, sodales ante a,
        congue dui. Donec varius nec neque nec aliquet. Sed justo mauris, tristique in ipsum vel, mollis maximus mi.
        Aenean ut semper massa. Aenean tincidunt metus id diam venenatis mattis.
    </string>
    <string name="payment">PAYMENT</string>
    <string name="card_number">CARD DETAILS</string>
    <string name="dummy_card">4123 3456 5467 3452</string>
    <string name="expiry">EXPIRY</string>
    <string name="secure_code">SECURE CODE</string>
    <string name="mm">MM</string>
    <string name="forward_slash">/</string>
    <string name="yy">YY</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="subtotal">SubTotal</string>
    <string name="quantity">Quantity</string>
    <string name="qty">5</string>
    <string name="in_stock">In Stock</string>
    <string name="recommended">RECOMMENDED</string>
    <string name="best_seller">BEST SELLER</string>
    <string name="deals">DEALS</string>
    <string name="dummy_rating">4.5</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="pref_theme_val">pref_theme_val</string>
    <string name="settings_theme_summary">Light</string>
    <string name="settings_themes">Themes</string>
    <string name="settings_contact">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="pref_logout_val">pref_logout_val</string>
    <string name="pref_contact_val">pref_contact_val</string>
    <string name="search">Search</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="check_out">Check Out</string>
    <string name="contact_us_words">You can contact our awesome customer care team if you need any assistance</string>
    <string name="payment_method">Payment Method</string>
    <string name="save_card">Save Card</string>
    <string name="clear_all">Clear All</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="clear_all_cart_items">Clear all cart items</string>
    <string name="go_back">Go Back</string>
    <string name="search_for_products">Search for products...</string>
    <string-array name="pref_theme">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>

    <string-array name="pref_contact">
        <item>Call</item>
        <item>Message</item>
        <item>Mail</item>
    </string-array>

    <string-array name="payment_methods">
        <item>Saved Card</item>
        <item>New Card</item>
    </string-array>
</resources>