<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="General">
        <ListPreference
            android:defaultValue="Light"
            android:dialogTitle="@string/settings_themes"
            android:entries="@array/pref_theme"
            android:entryValues="@array/pref_theme"
            android:key="@string/pref_theme_val"
            android:title="@string/settings_themes"
            app:icon="@drawable/outline_light_mode_24"
            android:summary="@string/settings_theme_summary"/>

    </PreferenceCategory>

    <Preference
        android:dialogTitle="@string/settings_themes"
        android:title="@string/log_out"
        android:key="@string/pref_logout_val"
        app:icon="@drawable/baseline_power_settings_new_24"/>
</PreferenceScreen>