<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_launcher_background" />
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/sm"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/product_name"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/xs"
                android:gravity="center_vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/product_rating_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/xs"
                    tools:srcCompat="@drawable/outline_star_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/product_description_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xs"
                android:text="@string/description_title"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xs"
                android:text="@string/lorem"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>